--- a/cToast/src/main/res/layout/activity_ctoast.xml
+++ b/cToast/src/main/res/layout/activity_ctoast.xml
@@ -24,6 +24,8 @@
 
 	<LinearLayout
 		android:gravity="center"
+		android:layout_marginStart="16dp"
+		android:layout_marginEnd="16dp"
 		android:orientation="horizontal"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
