--- a/cToast/src/main/res/layout/activity_ctoast.xml
+++ b/cToast/src/main/res/layout/activity_ctoast.xml
@@ -19,7 +19,7 @@
 		android:layout_marginLeft="8dp"
 		android:layout_marginRight="8dp"
 		android:layout_toLeftOf="@id/toastMsgText"
-		android:src="@drawable/ic_error_red_24dp" />
+		app:srcCompat="@drawable/ic_error_red_24dp" />
 
 
 	<LinearLayout
@@ -39,7 +39,7 @@
 			android:layout_marginLeft="8dp"
 			android:layout_marginRight="8dp"
 			android:layout_toLeftOf="@id/toastMsgText"
-			android:src="@drawable/ic_error_red_24dp" />
+			app:srcCompat="@drawable/ic_error_red_24dp" />
 
 
 		<TextView
@@ -58,7 +58,7 @@
 			android:layout_marginLeft="8dp"
 			android:layout_marginRight="8dp"
 			android:layout_toLeftOf="@id/toastMsgText"
-			android:src="@drawable/ic_error_red_24dp" />
+			app:srcCompat="@drawable/ic_error_red_24dp" />
 	</LinearLayout>
 
 	<ImageView
@@ -69,7 +69,7 @@
 		android:layout_marginLeft="8dp"
 		android:layout_marginRight="8dp"
 		android:layout_toLeftOf="@id/toastMsgText"
-		android:src="@drawable/ic_error_red_24dp" />
+		app:srcCompat="@drawable/ic_error_red_24dp" />
 
 
 </LinearLayout>
